--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "fabricpy"
+name = "fabryc"
 version = "0.1.0"
 description = ""
 authors = ["Léo Grosjean <leo.grosjean@servier.com>"]
